# socotra

./: .gitignore  Cargo.toml  README.md  build.rs  config.yml  deny.toml
src/: bank.rs  config.rs  grpc.rs  lib.rs  metrics.rs  rocksdb.rs  rpc.rs
src/rpc/: jsonrpc.rs  server.rs
src/source/: grpc.rs  mod.rs  rpc.rs
src/storage/: blocks.rs  mod.rs  read.rs  reader.rs  rocksdb.rs
