[package]
name = "socotra"
version = "0.1.0"
authors = ["Lamports Dev"]
edition = "2024"
description = "Solana accounts state"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/socotra"
license = "Apache-2.0"
keywords = ["solana", "rpc"]
publish = false

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.3"
human-size = "0.4.3"
humantime-serde = "1.1.1"
hyper = "1.6.0"
hyper-util = { version = "0.1.10", features = ["server-auto", "server-graceful"] }
jsonrpsee-types = "0.26.0"
maplit = "1.0.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false }
num_cpus = "1.16.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
pin-project = "1.1.10"
prost = "0.14.1"
reqwest = { version = "0.13.2", features = ["stream"] }
richat-client = "8.1.0"
richat-metrics = "1.0.1"
richat-proto = "8.0.0"
richat-shared = "8.0.0"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.139"
signal-hook = "0.4.3"
solana-rpc-client = "~3.1.0"
solana-commitment-config = "~3.1.0"
solana-sdk = "~3.0.0"
solana-transaction-status-client-types = "~3.1.0"
solana-version = "~3.1.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.16"
tonic = "0.14.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.19"

[build-dependencies]
anyhow = "1.0.96"
cargo-lock = "11.0.0"
git-version = "0.3.9"
vergen = { version = "9.0.4", features = ["build", "rustc"] }

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
